--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body.vc {
 }
 
 .abajo {
-    background-color: #000000;
+    background-color: #0dc9f0;
 
 }
 
@@ -44,6 +44,7 @@ a.nav-link {
     width: 100%;
     margin: 10px 0;
     background-color: #0dc9f0;
+    border-radius: 30px;
 }
 
 .serv i {
