--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body.vc {
     background-color: #000000;
 }
 
-/* MENU ======== */
+/* NAVBAR - MENU ======== */
 .navbar-dark {
     transition: all 0.5s ease;
 }
@@ -27,7 +27,7 @@ a.nav-link {
     color: #fff;
 }
 
-/* TEXTOS ======== */
+/* TEXTOS H1 - H2 ======== */
 .title,
 .subtitle {
     font-size: 2rem;
@@ -38,6 +38,10 @@ a.nav-link {
     height: 100%;
     max-height: 950px;
     overflow: hidden;
+}
+
+img.carousel-img {
+    width: 100%;
 }
 
 .serv {
@@ -52,6 +56,10 @@ a.nav-link {
     font-size: 1.5rem;
 }
 
+.card-body {
+    background-color: #0dc9f0;
+}
+
 form i {
     margin-right: 1rem;
     color: #0dc9f0;
@@ -62,22 +70,19 @@ form i {
     color: #0dc9f0;
 }
 
-.card-body {
+.tooltip-custom .tooltip-inner,
+.tooltip-custom .arrow {
     background-color: #0dc9f0;
-}
-
-.tooltip-custom .tooltip-inner {
-    background-color: #0dc9f0;
-}
-
-.bs-tooltip-top .arrow::before,
-.bs-tooltip-auto[x-placement^="top"] .arrow::before {
-    border-top-color: #0dc9f0;
+    max-width: 250px;
 }
 
 /* FOOTER ======== */
 footer {
     background-color: #0dc9f0;
+}
+
+footer ul li a {
+    color: #ffffff;
 }
 
 footer ul li i::before {
@@ -91,7 +96,16 @@ footer ul li i:hover {
 }
 
 @media (max-width: 992px) {
+    .logo img {
+        height: 40px;
+    }
+    
     .navbar {
         padding: 0 20px;
+    }
+
+    img.carousel-img {
+        width: auto;
+        height: 500px;
     }
 }
